--- a/css/index.css
+++ b/css/index.css
@@ -18,7 +18,7 @@ html {
   }
   
   body {
-    background-size: 40cm;
+    background-size: 100%;
     background-image: url("img/1010066.png");
   }
   
