Changes to be committed: añadir cover 	modified:   css/index.css

--- a/css/index.css
+++ b/css/index.css
@@ -18,7 +18,7 @@ html {
   }
   
   body {
-    background-size: 100%;
+    background-size: cover;
     background-image: url("img/1010066.png");
   }
   
