--- a/css/index.css
+++ b/css/index.css
@@ -20,7 +20,7 @@ html {
   body {
     background-size: 100%;
     background-image: url("img/1010066.png");
-    display: inline-flexbox;
+    display: -ms-inline-flexbox;
   }
   
   .main {
