--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,7 @@
 html {
     font-size: 65%;
     box-sizing: border-box;
-  font-family: "Enhanced Dot Digital-7", sans-serif;
+  font-family: "Enhanced Dot Digital-7";
   }
   
   * {
@@ -19,7 +19,7 @@ html {
   
   body {
     background-size: 100%;
-    background-image: url("img/1010066.png");
+    background-image: url("img/mesa.png");
     display: -ms-inline-flexbox;
   }
   
@@ -33,11 +33,11 @@ html {
   }
   
   .titulo {
-    font-size: 6rem;
-    padding: 1.5rem;
+    font-size: 3rem;
+    padding: 1rem;
     text-align: center;
-    margin: auto;
-    color: #18edff;
+    margin: 8,4;
+    color: #00ff11;
    
   }
   
@@ -45,20 +45,20 @@ html {
     padding: 1rem;
     margin: 0 1rem 0 1rem;
     box-shadow: 2px 2px 2px 1px rgba(255, 5, 5, 0.522);
-    background-color: #002c2f;
+    background-color: #002c2f00;
     border-radius: 0.5rem;
     height: auto;
   }
   
   label {
-    color: #e1d609;
-    background-color: #b238a200;
+    color: #ff00dd;
+    background-color: #000000a4;
     display: block;
-    padding: 1rem;
+    padding: .5rem;
     text-align: center;
     border-radius: 5px;
     text-transform: uppercase;
-    font-size: 1.4rem;
+    font-size: 2rem;
     letter-spacing: 1px;
     font-weight: bold;
   }
@@ -82,23 +82,26 @@ html {
     margin-right: 1rem;
     border-radius: 0.5rem;
     cursor: pointer;
+    font-family: "Enhanced Dot Digital-7";
   }
   
   .btn:hover {
     background-color:#38b259;
+    font-family: "Enhanced Dot Digital-7";
   }
   
   .text-input {
     border-radius: 1rem;
-    background-color:#fdfdfd;
-    border: 1px solid rgb(0, 0, 0);
+    background-color:#060606b4;
+    border: 1px solid rgb(255, 0, 0);
     padding: 1rem;
     width: 100%;
     margin-top: 1rem;
     margin-bottom: .5rem;
     font-size: 2rem;
-    color: #f72900;
+    color: #00ff11;
     font-weight: bold;
+    font-family: "Enhanced Dot Digital-7";
   }
   
   .error {
@@ -111,4 +114,5 @@ html {
     text-transform: uppercase;
     font-weight: bold;    
     border-radius: 0.5rem;
+    font-family: "Enhanced Dot Digital-7";
   }
