--- a/css/index.css
+++ b/css/index.css
@@ -18,9 +18,11 @@ html {
   }
   
   body {
-    background-size: 100%;
+    background-size: cover;
     background-image: url("img/mesa.png");
     display: -ms-inline-flexbox;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
   }
   
   .main {
@@ -84,9 +86,27 @@ html {
     cursor: pointer;
     font-family: "Enhanced Dot Digital-7";
   }
+
+  .btn2 {
+    border: 0;
+    color: rgb(255, 255, 255);
+    font-weight: bold;
+    background-color:#2c7a7b;
+    padding: 1rem;
+    margin-top: 1rem;
+    margin-right: 1rem;
+    border-radius: 0.5rem;
+    cursor: pointer;
+    font-family: "Enhanced Dot Digital-7";
+  }
   
   .btn:hover {
     background-color:#38b259;
+    font-family: "Enhanced Dot Digital-7";
+  }
+
+  .btn2:hover {
+    background-color:#a7b32a;
     font-family: "Enhanced Dot Digital-7";
   }
   
@@ -116,3 +136,27 @@ html {
     border-radius: 0.5rem;
     font-family: "Enhanced Dot Digital-7";
   }
+  .nombre{
+    color: #00ff11;
+    font-size: 22px;
+    font-weight: bolder;
+    text-align: center;
+    position: relative;
+    margin-left: 35px;
+    padding: 1px;
+}
+
+footer { 
+    box-sizing: border-box;
+    position:relative;
+    width: 100%;  
+    padding: 1px; 
+    margin-top: 60px; 
+    opacity: 100%;
+    border-radius: 20px;
+}
+
+.logos{
+  border: 2.5px solid yellow;
+  border-radius: 60%;
+}
