--- a/css/index.css
+++ b/css/index.css
@@ -34,11 +34,11 @@ html {
     gap: 3rem;
   }
   
-  .titulo {
+  .title {
     font-size: 3rem;
     padding: 1rem;
     text-align: center;
-    margin: 8,4;
+    margin: auto;
     color: #00ff11;
    
   }
@@ -74,7 +74,7 @@ html {
     margin-right: 0;
   }
   
-  .btn {
+  *.btn, *.btn2 {
     border: 0;
     color: rgb(255, 255, 255);
     font-weight: bold;
@@ -87,19 +87,6 @@ html {
     font-family: "Enhanced Dot Digital-7";
   }
 
-  .btn2 {
-    border: 0;
-    color: rgb(255, 255, 255);
-    font-weight: bold;
-    background-color:#2c7a7b;
-    padding: 1rem;
-    margin-top: 1rem;
-    margin-right: 1rem;
-    border-radius: 0.5rem;
-    cursor: pointer;
-    font-family: "Enhanced Dot Digital-7";
-  }
-  
   .btn:hover {
     background-color:#38b259;
     font-family: "Enhanced Dot Digital-7";
@@ -136,6 +123,7 @@ html {
     border-radius: 0.5rem;
     font-family: "Enhanced Dot Digital-7";
   }
+
   .nombre{
     color: #00ff11;
     font-size: 22px;
